# Social-Uploader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  commands.py  setup_wizard.py
core/: __init__.py  config_manager.py  exceptions.py  integration.py  logging_config.py  queue_manager.py  uploader_factory.py  video_processor.py
tests/: test_config_manager.py  test_video_processor.py
uploaders/: __init__.py  base.py  instagram.py  tiktok.py  youtube.py
